corrected spacing for choices

--- a/style.css
+++ b/style.css
@@ -33,9 +33,10 @@ body {
     background-color: #333;
     border-radius: 5px;
     margin: 20px;
-    padding: 5px;
+    padding: 0px;
     text-align: center;
     font-size: 16px;
+    
 }
 
 .meter-empty {
@@ -46,7 +47,7 @@ body {
 }
 
 .meter-fill {
-    width: 200px;
+    width: 100%;
     height: 400px;
     margin-right: 1px;
     background-color: rgb(75, 184, 147);
@@ -63,11 +64,23 @@ body {
     background-color: rgba(51, 51, 51, 0.082);
 }
 
+.choices {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 90%;
+    align-content: flex-start;
+    margin-left: 1%;
+    overflow-y: scroll;
+    
+}
 
 .choice {
     background-color: rgb(85, 85, 199);
     width: 50px;
     height: 50px;
-    margin: 5px;
+    margin: 10px;
+    border-radius: 5px;
 }
 
+ 
